--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,4 +37,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          pnpm run --recursive build
           pnpm run publish
