feat(openweather): Added openweathermap reporter
This reporter is able to use the OpenWeatherMap service to retrieve
weather information and return that to the paper. I have not integrated
that into the CLI yet.

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,11 +2,12 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "./build",
+    "rootDir": "./src",
     "baseUrl": "./",
     "paths": {
-      "@daily-paper/cli/*": [
+      "@daily-paper/core/*": [
         "./src/*",
       ],
     },
-  }
+  },
 }
