--- a/packages/reporter-openweathermap/tsconfig.json
+++ b/packages/reporter-openweathermap/tsconfig.json
@@ -1,12 +1,18 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "rootDir": "./src",
     "outDir": "./build",
     "baseUrl": "./",
     "paths": {
-      "@daily-paper/cli/*": [
+      "@daily-paper/reporter-openweathermap/*": [
         "./src/*",
       ],
     },
-  }
+  },
+  "references": [
+    {
+      "path": "../core",
+    },
+  ],
 }
