--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf build",
+    "clean": "rimraf build '**/*.tsbuildinfo'",
     "lint": "eslint 'src/**/*.{js,ts}'",
     "command": "ts-node --require tsconfig-paths/register ./src/index.ts"
   },
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@daily-paper/eslint-config": "workspace:^0.0.0",
+    "@daily-paper/tsconfig": "workspace:^0.0.0",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.14.14",
     "@types/pug": "^2.0.4",
