--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,7 +17,7 @@
   "types": "build/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf build",
+    "clean": "rimraf build '**/*.tsbuildinfo'",
     "lint": "eslint 'src/**/*.{js,ts}'"
   },
   "dependencies": {
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@daily-paper/eslint-config": "workspace:^0.0.0",
+    "@daily-paper/tsconfig": "workspace:^0.0.0",
     "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
