--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "@daily-paper/tsconfig",
   "compilerOptions": {
-    "outDir": "./build",
     "rootDir": "./src",
+    "outDir": "./build",
     "baseUrl": "./",
     "paths": {
       "@daily-paper/core/*": [
