--- a/packages/reporter-openweathermap/package.json
+++ b/packages/reporter-openweathermap/package.json
@@ -17,7 +17,7 @@
   "types": "build/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf build",
+    "clean": "rimraf build '**/*.tsbuildinfo'",
     "lint": "eslint 'src/**/*.{js,ts}'",
     "test": "run-s test:spec test:integration",
     "test:spec": "mocha 'src/**/*.spec.ts'",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@daily-paper/eslint-config": "workspace:^0.0.0",
+    "@daily-paper/tsconfig": "workspace:^0.0.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
     "earljs": "^0.1.9",
