fix(ci): Marked eslint-config and tsconfig as public

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -15,6 +15,9 @@
   "main": "tsconfig.json",
   "scripts": {
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "tsconfig.json"
   ]
