--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,10 +17,12 @@
     "build": "tsc",
     "clean": "rimraf build '**/*.tsbuildinfo'",
     "lint": "eslint 'src/**/*.{js,ts}'",
+    "test": "mocha 'src/**/*.spec.ts'",
     "command": "ts-node --require tsconfig-paths/register ./src/index.ts"
   },
   "dependencies": {
     "@daily-paper/core": "workspace:^0.0.0",
+    "@daily-paper/reporter-openweathermap": "workspace:^0.0.0",
     "commander": "^6.2.1",
     "js-yaml": "^3.14.1",
     "pug": "^3.0.0",
@@ -30,13 +32,18 @@
   "devDependencies": {
     "@daily-paper/eslint-config": "workspace:^0.0.0",
     "@daily-paper/tsconfig": "workspace:^0.0.0",
+    "@types/chai": "^4.2.14",
     "@types/js-yaml": "^3.12.5",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
     "@types/pug": "^2.0.4",
     "@types/puppeteer": "^5.4.2",
+    "chai": "^4.2.0",
+    "earljs": "^0.1.9",
     "eslint": "^7.15.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
+    "mocha": "^8.2.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
