--- a/packages/reporter-openweathermap/package.json
+++ b/packages/reporter-openweathermap/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@daily-paper/eslint-config": "workspace:^0.0.0",
+    "@daily-paper/mocharc": "workspace:^0.0.0",
     "@daily-paper/tsconfig": "workspace:^0.0.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
