feat(weather): Added base for weather editor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     },
     "cSpell.words": [
         "earljs",
+        "fontsource",
         "mocharc",
         "openweathermap",
         "typestrict",
