--- a/packages/editor-html-weather/package.json
+++ b/packages/editor-html-weather/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@daily-paper/reporter-openweathermap",
+  "name": "@daily-paper/editor-html-weather",
   "version": "0.0.0",
-  "description": "Daily Paper weather reporter using OpenWeatherMap",
+  "description": "Daily Paper editor that converts weather data into HTML for the paper",
   "license": "MIT",
   "author": "James Durand",
   "homepage": "https://github.com/durandj/daily-paper#readme",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/durandj/daily-paper.git"
+    "url": "git+https://github.com/durandj/daily-paper.git"
   },
   "main": "build/index.js",
   "module": "build/index.js",
@@ -19,37 +19,36 @@
     "build": "tsc",
     "clean": "rimraf build '**/*.tsbuildinfo'",
     "lint": "eslint 'src/**/*.{js,ts}'",
-    "test": "run-s test:spec test:integration",
-    "test:spec": "mocha 'src/**/*.spec.ts'",
-    "test:integration": "mocha 'src/**/*.test.ts'"
+    "storybook": "start-storybook"
   },
   "dependencies": {
-    "@daily-paper/common-weather": "workspace:^0.0.0",
-    "@daily-paper/core": "workspace:^0.0.0",
-    "date-fns": "^2.16.1",
-    "domexception": "^2.0.1",
-    "node-fetch": "^3.0.0-beta.9"
+    "@daily-paper/micro-frontend": "workspace:^0.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "@fontsource/gloria-hallelujah": "^4.1.0",
+    "react": "^17.0.1",
+    "wired-elements": "^2.1.2"
   },
   "devDependencies": {
     "@daily-paper/eslint-config": "workspace:^0.0.0",
     "@daily-paper/mocharc": "workspace:^0.0.0",
-    "@daily-paper/test-utils": "workspace:^0.0.0",
     "@daily-paper/tsconfig": "workspace:^0.0.0",
+    "@storybook/cli": "^6.1.14",
+    "@storybook/react": "^6.1.14",
     "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.20",
+    "@types/node": "^14.14.17",
     "earljs": "^0.1.10",
-    "eslint": "^7.17.0",
-    "fetch-mock": "^9.11.0",
-    "http-status-codes": "^2.1.4",
-    "husky": "^4.3.7",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-sonarjs": "^0.5.0",
+    "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "mocha": "^8.2.1",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3",
-    "winston": "^3.3.3"
+    "typescript": "^4.1.3"
   },
   "publishConfig": {
     "access": "public"
