--- a/packages/editor-html-weather/package.json
+++ b/packages/editor-html-weather/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf build '**/*.tsbuildinfo'",
-    "lint": "eslint 'src/**/*.{js,ts}'",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "storybook": "start-storybook"
   },
   "dependencies": {
