--- a/packages/common-weather/package.json
+++ b/packages/common-weather/package.json
@@ -28,11 +28,25 @@
     "@daily-paper/mocharc": "workspace:^0.0.0",
     "@daily-paper/test-utils": "workspace:^0.0.0",
     "@daily-paper/tsconfig": "workspace:^0.0.0",
+    "date-fns": "^2.16.1",
     "eslint": "^7.18.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.3"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix"
+    ]
   }
 }
