--- a/packages/units/package.json
+++ b/packages/units/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@daily-paper/test-utils",
+  "name": "@daily-paper/units",
   "version": "0.0.0",
-  "description": "Utilities for testing Daily Paper packages",
+  "description": "Helpers for working with different units",
   "license": "MIT",
   "author": "James Durand",
   "homepage": "https://github.com/durandj/daily-paper#readme",
@@ -18,16 +18,8 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf build '**/*.tsbuildinfo'",
-    "lint": "eslint 'src/**/*.{js,ts}'"
-  },
-  "devDependencies": {
-    "@daily-paper/eslint-config": "workspace:^0.0.0",
-    "@daily-paper/tsconfig": "workspace:^0.0.0",
-    "eslint": "^7.18.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.1.3"
+    "lint": "eslint 'src/**/*.{js,ts}'",
+    "test": "mocha 'src/**/*.spec.ts'"
   },
   "publishConfig": {
     "access": "public"
@@ -41,5 +33,21 @@
     "*.{js,ts}": [
       "eslint --fix"
     ]
+  },
+  "dependencies": {
+    "date-fns": "^2.16.1"
+  },
+  "devDependencies": {
+    "@daily-paper/eslint-config": "workspace:^0.0.0",
+    "@daily-paper/mocharc": "workspace:^0.0.0",
+    "@daily-paper/tsconfig": "workspace:^0.0.0",
+    "earljs": "^0.1.10",
+    "eslint": "^7.18.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
+    "mocha": "^8.2.1",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.3"
   }
 }
