--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -20,6 +20,10 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0"
   },
+  "peerDependencies": {
+    "eslint": "^7.15.0",
+    "prettier": "^2.2.1"
+  },
   "publishConfig": {
     "access": "public"
   }
