--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "fontsource",
         "mocharc",
         "openweathermap",
+        "prettierrc",
         "typestrict",
         "unmount"
     ],
