--- a/packages/editor-html-weather/package.json
+++ b/packages/editor-html-weather/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@daily-paper/eslint-config-react": "workspace:^0.0.0",
     "@daily-paper/mocharc": "workspace:^0.0.0",
+    "@daily-paper/prettierrc": "workspace:^0.0.0",
     "@daily-paper/tsconfig": "workspace:^0.0.0",
     "@storybook/cli": "^6.1.15",
     "@storybook/react": "^6.1.15",
