--- a/packages/reporter-openweathermap/package.json
+++ b/packages/reporter-openweathermap/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@daily-paper/eslint-config": "workspace:^0.0.0",
     "@daily-paper/mocharc": "workspace:^0.0.0",
+    "@daily-paper/prettierrc": "workspace:^0.0.0",
     "@daily-paper/test-utils": "workspace:^0.0.0",
     "@daily-paper/tsconfig": "workspace:^0.0.0",
     "@types/mocha": "^8.2.0",
